--- a/OldClock/src/webapp/oldclock.html
+++ b/OldClock/src/webapp/oldclock.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link type="text/css" rel="stylesheet" href="OldClock.css">
+    <link type="text/css" rel="stylesheet" href="oldclock.css">
     <title>ThisOldClock</title>
     <script type="text/javascript" language="javascript" src="oldclock/oldclock.nocache.js"></script>
   </head>
